syntax = "proto3";

package ras.api.v1;

import "google/protobuf/empty.proto";
import "v8platform/serialize/v1/clusters.proto";
import "ras/api/v1/helpers.proto";
option go_package = "github.com/v8platform/ras/api/v1";

service ClustersService {
  rpc Clusters(GetClustersRequest) returns (GetClustersResponse) {};
  rpc GetCluster(GetClusterRequest) returns (v8platform.serialize.v1.ClusterInfo) {};
  rpc AddCluster(AddClusterRequest) returns (AddClusterResponse) {};
  rpc DeleteCluster(DeleteClusterRequest) returns (google.protobuf.Empty) {};
}

message GetClustersRequest {}

message GetClusterRequest {
  Cluster cluster = 1;
}

message GetClustersResponse {
  repeated v8platform.serialize.v1.ClusterInfo items = 1;
}

message AddClusterRequest {
  v8platform.serialize.v1.ClusterInfo cluster = 1;
}

message AddClusterResponse {
  string id = 1;
}

message DeleteClusterRequest {
  Cluster cluster = 1;
}
