syntax = "proto3";

package ras.protocol.v1;

import "google/protobuf/any.proto";
import "google/protobuf/descriptor.proto";
import "ras/protocol/v1/param.proto";
import "ras/protocol/v1/types.proto";
import "ras/encoding/ras.proto";


option go_package = "github.com/v8platform/protos/gen/ras/protocol/v1";
option (ras.encoding.options) = {
  generate_unmarshal: true,
  generate_marshaller: true,
  generate_tags: true,
};

message Packet {
  PacketType Type = 1 [(ras.encoding.tags) = "ras:\"byte,1\""];
  int32 Length = 2 [(ras.encoding.tags) = "ras:\"size,2\""];;
  bytes Data = 3 [(ras.encoding.tags) = "ras:\"bytes,3\""];;
}
