syntax = "proto3";

package ras.serialize.v1;

import "google/protobuf/any.proto";

option go_package = "github.com/v8platform/ras/serialize/v1";

enum RequestType {
    NEGOTIATE = 0;
    CONNECT = 1;
    CONNECT_ACK = 2;
    DISCONNECT = 4;
    reserved 3, 5 to 10;
    reserved "START_TLS", "SASL_NEGOTIATE", "SASL_AUTH", "SASL_CHALLENGE";
    reserved "SASL_SUCCESS", "SASL_FAILURE", "SASL_ABORT";
    ENDPOINT_OPEN = 11;
    ENDPOINT_OPEN_ACK = 12;
    ENDPOINT_CLOSE = 13;
    ENDPOINT_MESSAGE = 14;
    ENDPOINT_FAILURE = 15;
    KEEP_ALIVE = 16;
}

enum EndpointMessageKind {
    VOID_MESSAGE = 0;
    MESSAGE      = 1;
    EXCEPTION    = 255;
}

enum EndpointMessageType {
    GET_AGENT_ADMINS_REQUEST = 0;
    GET_AGENT_ADMINS_RESPONSE = 1;
    GET_CLUSTER_ADMINS_REQUEST = 2;
    GET_CLUSTER_ADMINS_RESPONSE = 3;
    //    REG_AGENT_ADMIN_REQUEST = 4;
    //    REG_CLUSTER_ADMIN_REQUEST = 5;
    //    UNREG_AGENT_ADMIN_REQUEST = 5;
    //    UNREG_CLUSTER_ADMIN_REQUEST = 5;
    //    AUTHENTICATE_AGENT_REQUEST = 5;
    //    AUTHENTICATE_REQUEST = 5;
    //    ADD_AUTHENTICATION_REQUEST = 5;
    //    GET_CLUSTERS_REQUEST = 5;
    //    GET_CLUSTERS_RESPONSE = 5;
    //    GET_CLUSTER_INFO_REQUEST = 5;
    //    GET_CLUSTER_INFO_RESPONSE = 5;
    //    REG_CLUSTER_REQUEST = 5;
    //    REG_CLUSTER_RESPONSE = 5;
    //    UNREG_CLUSTER_REQUEST = 5;
    //    GET_CLUSTER_MANAGERS_REQUEST = 5;
    //    GET_CLUSTER_MANAGERS_RESPONSE = 5;
    //    GET_CLUSTER_MANAGER_INFO_REQUEST = 5;
    //    GET_CLUSTER_MANAGER_INFO_RESPONSE = 5;
    //    GET_WORKING_SERVERS_REQUEST = 5;
    //    GET_WORKING_SERVERS_RESPONSE = 5;
    //    GET_WORKING_SERVER_INFO_REQUEST = 5;
    //    GET_WORKING_SERVER_INFO_RESPONSE = 5;
    //    REG_WORKING_SERVER_REQUEST = 5;
    //    REG_WORKING_SERVER_RESPONSE = 5;
    //    UNREG_WORKING_SERVER_REQUEST = 5;
    //    GET_WORKING_PROCESSES_REQUEST = 5;
    //    GET_WORKING_PROCESSES_RESPONSE
    //    GET_WORKING_PROCESS_INFO_REQUEST
    //    GET_WORKING_PROCESS_INFO_RESPONSE
    //    GET_SERVER_WORKING_PROCESSES_REQUEST
    //    GET_SERVER_WORKING_PROCESSES_RESPONSE
    //    GET_CLUSTER_SERVICES_REQUEST
    //    GET_CLUSTER_SERVICES_RESPONSE
    //    CREATE_INFOBASE_REQUEST
    //    CREATE_INFOBASE_RESPONSE
    //    UPDATE_INFOBASE_SHORT_REQUEST
    //    UPDATE_INFOBASE_REQUEST
    //    DROP_INFOBASE_REQUEST
    //    GET_INFOBASES_SHORT_REQUEST
    //    GET_INFOBASES_SHORT_RESPONSE
    //    GET_INFOBASES_REQUEST  // Deprecated: Bug: сервис не отвечает на данный запрос
    //    GET_INFOBASES_RESPONSE // Deprecated: Bug: см. GET_INFOBASES_REQUEST
    //    GET_INFOBASE_SHORT_INFO_REQUEST
    //    GET_INFOBASE_SHORT_INFO_RESPONSE
    //    GET_INFOBASE_INFO_REQUEST
    //    GET_INFOBASE_INFO_RESPONSE
    //    GET_CONNECTIONS_SHORT_REQUEST
    //    GET_CONNECTIONS_SHORT_RESPONSE
    //    GET_INFOBASE_CONNECTIONS_SHORT_REQUEST
    //    GET_INFOBASE_CONNECTIONS_SHORT_RESPONSE
    //    GET_CONNECTION_INFO_SHORT_REQUEST
    //    GET_CONNECTION_INFO_SHORT_RESPONSE
    //    GET_INFOBASE_CONNECTIONS_REQUEST
    //    GET_INFOBASE_CONNECTIONS_RESPONSE
}